--- a/_publish.yml
+++ b/_publish.yml
@@ -2,3 +2,7 @@
   netlify:
     - id: 9528daa2-6e45-4e9d-a3e2-d492131d87cd
       url: 'https://www.hertiecodingclub.com'
+    - id: bf7f573c-dea9-4715-87b2-dad0eadb86f6
+      url: 'https://extraordinary-croquembouche-0bbff7.netlify.app'
+    - id: cf86e859-b8e9-4162-a3b2-a703784b2e99
+      url: 'https://serene-pasca-5c5a54.netlify.app'
