--- a/_website.yml
+++ b/_website.yml
@@ -38,7 +38,7 @@ website:
         href: data_science/data_science.qmd
       - text: "{{< fa solid landmark >}} For instructors"
         href: for_instructors/instructors.qmd
-      - text: "{{< fa solid newspaper >}} References"
+      - text: "{{< fa solid newspaper >}} Resources"
         href: references/reference.qmd
       - text: "{{< fa solid hand-point-up >}} About"
         href: about/about_us.qmd
